--- a/app/src/main/res/layout/section_ex1_item.xml
+++ b/app/src/main/res/layout/section_ex1_item.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:scaleType="centerCrop"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="130dp"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_launcher_background"
