update sectioned recyclerview with header

--- a/app/src/main/res/layout/section_ex1_header.xml
+++ b/app/src/main/res/layout/section_ex1_header.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     xmlns:tools="http://schemas.android.com/tools">
@@ -10,17 +13,24 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="5dp"
         tools:text="Title test text"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         android:id="@+id/tvTitle"/>
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/colorAccent"
         android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_below="@+id/view"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
