--- a/app/src/main/res/layout/section_ex1_item.xml
+++ b/app/src/main/res/layout/section_ex1_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView android:id="@+id/rootView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_item"
     app:cardUseCompatPadding="true"
